# ragagent2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEMO.md  GEMINI.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: acronym_overrides.yaml  config.yaml  entity_patterns.jsonl  extraction_prompts.yaml  normalization_rules.yaml  relationship_patterns.yaml  response_prompts.yaml
docs/: COMMAND_MODE_DEMO.md  COMMAND_MODE_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  INTERACTIVE_TUI_GUIDE.md  TESTING.md
examples/: demo_queries.json  graph_retriever_demo.py  query_parser_demo.py  run_demo_pipeline.py
examples/sample_docs/: exploration_overview.md  mars_missions.md  starship_development.md
plans/: MERGE_WORKFLOW_SPEC.md  developer-tasks.md  graph-rag-architecture.md  phase-1-foundation.md  phase-2-entity-extraction.md  phase-2.1-non-llm-relationships.md  phase-3-normalization-curation.md  phase-3.5-enhanced-review.md  phase-3.5-implementation-plan.md  phase-4-retrieval-system.md  phase-5-incremental-updates.md  phase-6-discovery-polish.md  prompt-engineering-notes.md  relationship-extraction-improvements.md  tui-workflow-simplification-plan.md
scripts/: __init__.py  cleanup_relationships.py  ingest_documents.py  query_system.py  reset_databases.py  review_entities.py  review_entities_interactive.py  run_discovery.py  setup_databases.py  update_documents.py
src/curation/: __init__.py  batch_operations.py  entity_approval.py  review_interface.py
src/extraction/: __init__.py  cooccurrence_extractor.py  dependency_extractor.py  entity_merger.py  llm_extractor.py  models.py  pattern_extractor.py  relationship_validator.py  spacy_extractor.py
src/ingestion/: __init__.py  chunker.py  metadata_extractor.py  pdf_parser.py  text_cleaner.py  text_file_parser.py  text_rewriter.py
src/normalization/: __init__.py  acronym_resolver.py  entity_deduplicator.py  fuzzy_matcher.py  normalization_table.py  string_normalizer.py
src/pipeline/: __init__.py  discovery_pipeline.py  ingestion_pipeline.py  update_pipeline.py
src/retrieval/: graph_retriever.py  hybrid_retriever.py  models.py  query_parser.py  reranker.py  response_generator.py
src/storage/: neo4j_manager.py  qdrant_manager.py  schemas.py
src/utils/: candidate_keys.py  config.py  embeddings.py  llm_client.py  lzma_compat.py
tests/: test_config.py  test_e2e.py  test_embedding_provider.py  test_llm_client.py  test_query_cli_history.py
tests/test_curation/: test_batch_operations.py  test_create_entity_undo.py  test_entity_approval.py  test_neighborhood_issues.py  test_relationship_candidate_undo.py  test_relationship_promotion.py  test_relationship_promotion_invalid_mentions.py  test_review_interactive_logic.py  test_review_interface.py
tests/test_extraction/: test_cooccurrence_extractor.py  test_dependency_extractor.py  test_entity_merger.py  test_llm_extractor.py  test_pattern_extractor.py  test_spacy_extractor.py
tests/test_ingestion/: test_text_cleaner.py  test_text_file_parser.py  test_text_rewriter.py
tests/test_interactive/: test_command_parser.py  test_interactive_app.py  test_neighborhood_modal_flow.py
tests/test_normalization/: test_acronym_resolver.py  test_entity_deduplicator.py  test_fuzzy_matcher.py  test_normalization_table.py  (+1 more)
(+43 files in other folders)
